# HabitTracker

./: .env.example  .env.template  .flake8  .gitignore  Dockerfile-Backend  Dockerfile-Frontend  Dockerfile-Remind  docker-compose.yml  pyproject.toml  supervisord_celery.conf
alembic/: env.py
alembic/versions/: 0df1d3670656_update_habits_last_time_check_not_.py  0f0e45ecd628_delete_sessions.py  146d9c4bad64_update_back_sessions_session_id_uuid_str.py  213ed96019e9_create_habittracker.py  2d90fa40cbe2_initial_migration.py  2dd94edf5bf9_update_refresh_token_in_users.py  340b50538e2b_correct_remind_time.py  387a7ed09854_delete_habittracker.py  3fc849d54093_delete_habitcelerytelegram_update_.py  44aed270adad_add_new_table_sessions.py  4fc2e49bbd9d_delete_habittracker.py  55f079e1592e_add_remind_time_and_count_repeat_in_.py  57146a0e4e55_update_habits_last_time_check_nullable_.py  5b8b549b603c_add_last_time_check_in_habittracker.py  6b11517ae9a6_create_habittracker.py  711ac6f94b57_add_count_repeat_in_habits.py  77995c4741e5_add_password_in_users.py  7e79a42d2918_replace_count_repeat_from_habittracker_.py  7eca77739185_create_habitcelerytelegram.py  87222ec633da_add_remind_time_in_habittracker.py  8c4814c01357_move_refresh_token_to_sessions.py  8eb23d6c5667_update_sessions_session_id_str_uuid.py  97e847791fc3_add_email_in_users.py  9fdcd134f72d_create_at.py  (+12 more)
backend/: Dockerfile  __init__.py  config.py  controllers.py  database.py  exceptions.py  main.py  models.py  pyproject.toml  schemas.py  utils.py
backend/controllers/: __init__.py  habit.py  habit_celery_telegram_controller.py  habit_controller.py  habit_tracker_telegram_controller.py  user.py  user_controller.py
backend/database/: __init__.py  database.py  models.py
backend/database/controllers/: __init__.py  habit_controller.py  user_controller.py
backend/routes/: __init__.py  habit.py  habit_routes.py  remind_routes.py  user.py  user_routes.py
backend/routes/utils/: __init__.py  get_token_util.py  get_user_util.py
frontend/telegram_bot/: Dockerfile  __init__.py  bot.py  config.py  database.py  exceptions.py  keyboards.py  main.py  pyproject.toml  schemas.py  states.py
frontend/telegram_bot/api/: __init__.py  habit_api_controller.py  user_api_controller.py
frontend/telegram_bot/bot/: bot.py
frontend/telegram_bot/bot/keyboards/: __init__.py  gen_keyboards_main.py
frontend/telegram_bot/bot/states/: __init__.py  commands_states_groups.py  habit_states_groups.py  user_states_groups.py
frontend/telegram_bot/controllers/: __init__.py  habit_api_controller.py  remind_api_controller.py  user_api_controller.py
frontend/telegram_bot/database/: __init__.py  database.py  models.py  user_controller.py
frontend/telegram_bot/handlers/: __init__.py  user.py
frontend/telegram_bot/handlers/actions/: add_new_habit.py  change_user.py  get_all_habits.py
frontend/telegram_bot/handlers/commands/: help.py  login.py  logout.py  start.py
frontend/telegram_bot/handlers/handlers_actions/: __init__.py  add_new_habit.py  change_user.py  get_not_done_habits.py
frontend/telegram_bot/handlers/handlers_commands/: __init__.py  help.py  login.py  logout.py  start.py
frontend/telegram_bot/handlers/handlers_habit_actions/: __init__.py  check_habit.py  delete_habit.py  update_habit.py
frontend/telegram_bot/handlers/utils/: __init__.py  check_habit.py  delete_habit.py  get_user_util.py  send_habit_paginator_util.py  update_habit.py  update_token_util.py
remind/: __init__.py  celery_telegram_bot_controller.py  config.py  database.py  pyproject.toml  schemas.py  utils.py
remind/controllers/: __init__.py  remind_telegram_controller.py  utils.py
remind/database/: __init__.py  database.py  models.py
remind/database/controllers/: __init__.py  celery_task_controller.py  user_controller.py  user_info_telegram_controller.py
remind/telegram_bot/: __init__.py  celery_telegram.py  keyboards.py  states.py
