[tool.poetry]
name = "habittracker_frontend"
version = "0.1.0"
description = ""
authors = ["Yuri Kozhanov <ykozhanov97@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.7"
pytelegrambotapi = "4.23.0"
requests = "2.32.3"
pydantic = "2.9.2"
python-telegram-bot-pagination = "0.0.3"
python-dotenv = "1.0.1"
psycopg2 = "2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
